--- a/src/scss/layouts/layout_000/_tilleg.scss
+++ b/src/scss/layouts/layout_000/_tilleg.scss
@@ -30,7 +30,9 @@
     color: #fff;
     font-weight: 500;
     font-size: 16px;
+    line-height: 1.2;
     padding: 1.3em 1em;
+    height: max-content;
     &_2 {
       background: #f366db;
     }
