--- a/src/scss/layouts/layout_500/_show.scss
+++ b/src/scss/layouts/layout_500/_show.scss
@@ -1,17 +1,19 @@
 .show {
-  // width: 85%;
-  padding-bottom: 400px;
+  width: 70%;
+  padding-bottom: 300px;
   &_main-text {
     color: #3a3a3a;
     font-weight: 600;
   }
   &_title {
-    font-size: 45px;
     font-weight: 800;
     line-height: 1.2;
   }
   &_main-text {
-    // margin-top: 15px;
-    // margin-bottom: 160px;
+    margin-bottom: 20px;
+  }
+
+  &_vent-snart {
+    font-size: 28px;
   }
 }
