--- a/src/scss/layouts/layout_800/_show.scss
+++ b/src/scss/layouts/layout_800/_show.scss
@@ -1,28 +1,32 @@
 .show {
-  // width: 80%;
+  width: 80%;
+  max-width: 786px;
   background-image: url(../../../i/img/show-bg-m.jpg);
   background-position-x: left;
-  padding-bottom: 45px;
-  &_title {
-    text-align: right;
-    margin-right: 50px;
-    padding-top: 65px;
-    &_sec {
-      text-align: right;
-      padding-top: 8px;
-      margin-right: 50px;
-    }
-  }
+  padding-bottom: 20px;
+
   &_main-text {
     text-align: right;
+    margin-right: 70px;
     width: 270px;
-    margin-right: 50px;
-    color: #ffca6c;
+    color: #f9e853;
   }
 
   &_vent-snart {
-    margin-right: 50px;
-
+    margin-bottom: 60px;
     background: #f54ea4;
+    margin-right: 40px;
+    width: 245px;
+  }
+
+  &_title {
+    font-size: 48px;
+    text-align: right;
+    margin-right: 70px;
+
+    &_sec {
+      text-align: right;
+      margin-right: 70px;
+    }
   }
 }
