--- a/src/scss/layouts/layout_800/_kontakt.scss
+++ b/src/scss/layouts/layout_800/_kontakt.scss
@@ -1,11 +1,8 @@
 .kontakt {
-  width: 100%;
+  width: 90%;
+  max-width: 642px;
 
   &_block {
-    width: 80%;
-
-    // max-width: 1000px;
-
     margin-left: auto;
     margin-right: auto;
     &_h1 {
