--- a/src/scss/layouts/layout_000/_form.scss
+++ b/src/scss/layouts/layout_000/_form.scss
@@ -1,10 +1,77 @@
+.form_img-1500 {
+  display: none;
+}
+
 .form {
+  margin-top: 120px;
+  width: 90%;
+  max-width: 470px;
   margin-left: auto;
   margin-right: auto;
+  text-align: center;
+  background: linear-gradient(180deg, #ffd600 0%, #ffd910 100%);
+  border-radius: 46px;
+  padding: 60px 15px 35px;
+  box-shadow: 0px 40px 65px 5px rgba(255, 214, 1, 0.5);
 
-  &_main {
-    width: 100%;
+  &_title {
+    font-size: 28px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: 1.2px;
+    font-weight: 800;
+    font-family: $wowFontFamily;
+    color: #55433b;
+  }
 
-    height: 1450px;
+  &_num {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    font-size: 36px;
+    line-height: 1.2;
+    font-family: "Open Sans", sans-serif;
+    font-weight: bold;
+    color: #e10e86;
+
+    font-weight: 700;
+    letter-spacing: 0.25px;
+  }
+
+  &_text {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 18px;
+    line-height: 1.2;
+    text-align: center;
+    letter-spacing: 1.2px;
+    font-weight: 600;
+    font-family: $wowFontFamily;
+    color: #55433b;
+    margin-bottom: 40px;
+  }
+
+  &_btn {
+    background: linear-gradient(265.66deg, #ff66d4 0.55%, #a966ff 99.66%);
+    font-size: 12px;
+    line-height: 14px;
+
+    border-radius: 64px;
+    box-shadow: none;
+    text-transform: uppercase;
+    font-family: "Open Sans", sans-serif;
+    letter-spacing: 1px;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+    padding: 16px;
+    max-width: none;
+    text-decoration: none;
+    color: #fff;
+    cursor: pointer;
+    font-weight: 700;
+  }
+
+  &_img {
+    width: 70%;
+    margin-top: 40px;
   }
 }
