--- a/src/scss/layouts/layout_000/_arrow.scss
+++ b/src/scss/layouts/layout_000/_arrow.scss
@@ -1,7 +1,8 @@
-.arrow {
-  width: 52px;
-  height: 52px;
-  background-color: $main;
+.arrow-scroll {
+  width: 50px;
+  height: 50px;
+  padding: 8px;
+  background-color: #e010bd;
   position: fixed;
   right: 10px;
   bottom: 20px;
@@ -9,15 +10,13 @@
   text-align: center;
   vertical-align: middle;
 
-  &__img {
-    width: 30px;
-    margin-top: 10px;
-    rotate: 270deg;
-  }
+  // &__img {
+  //   width: 30px;
+  //   margin-top: 10px;
+  //   rotate: 270deg;
+  // }
 
   &:active {
     background-color: $dark-grey;
-    &__img {
-    }
   }
 }
