--- a/src/scss/layouts/layout_000/_gallery.scss
+++ b/src/scss/layouts/layout_000/_gallery.scss
@@ -1,22 +1,23 @@
 .gallery {
-  padding: 10px;
-  overflow: hidden;
-  margin-bottom: 80px;
-
-  &__intro {
-    @include intro;
-    margin: 0;
-    margin-bottom: 12px;
-  }
+  margin-top: 100px;
+  width: 70%;
+  max-width: 470px;
+  margin-left: auto;
+  margin-right: auto;
 
   &__title {
-    @include h2;
-    margin: 0;
-    margin-bottom: 48px;
+    font-size: 28px;
+    line-height: 28px;
+    text-align: center;
+    letter-spacing: 1.2px;
+    font-weight: 800;
+    font-family: $wowFontFamily;
+    color: #3a3a3a;
+    margin-bottom: 40px;
   }
 
   &__slider {
-    margin-bottom: 64px;
+    margin-bottom: 15px;
     display: flex;
     justify-content: space-between;
     &__img {
@@ -43,11 +44,11 @@
 }
 
 // --Slick slider
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  overflow: hidden;
-}
+// .container {
+//   margin-left: auto;
+//   margin-right: auto;
+//   overflow: hidden;
+// }
 
 .dots-box {
   margin: 0 auto;
@@ -79,14 +80,14 @@
   }
 
   & .slick-active button {
-    border: 1px solid $dark-blue;
+    border: 1px solid #fd8b06;
     // background: url(../../../i/point.svg) 100% 100% no-repeat;
     transition: all 0.3s ease;
     transform: scale(1);
 
     &::before {
       content: "!";
-      background-image: url(../../../i/point.svg);
+      background-image: url(../../../i/img/point.png);
       width: 100%;
       background-size: 8px;
       background-repeat: no-repeat;
