--- a/src/scss/layouts/layout_990/_tilleg.scss
+++ b/src/scss/layouts/layout_990/_tilleg.scss
@@ -1,50 +1,75 @@
-.tilleg {
-  &_title {
-    margin-bottom: 25px;
-  }
-  &_list {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    grid-template-areas:
-      "tf tf ts ts tt tt"
-      "tfr tfr tfv tfv tsx tsx"
-      ". tsn tsn te te .";
-    column-gap: 20px;
-    row-gap: 20px;
-    width: 1fr;
+// .tilleg {
+//   &_title {
+//     margin-bottom: 25px;
+//   }
+//   &_list {
+//     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+//     grid-template-rows: 1fr 1fr 1fr 1fr;
+//     grid-template-areas:
+//       "tf tf ts ts tt tt"
+//       "tfr tfr tfv tfv tsx tsx"
+//       "tsn tsn te te tpin tpin"
+//       ". tfot tfot tbal tbal .";
+//     column-gap: 20px;
+//     row-gap: 20px;
+//     width: 1fr;
 
-    &_frame {
-      padding: 0;
-      margin-top: 0;
+//     &_frame {
+//       padding: 0;
+//       margin-top: 0;
+//     }
+//   }
+// }
+
+// .tf {
+//   grid-area: tf;
+// }
+// .ts {
+//   grid-area: ts;
+// }
+// .tt {
+//   grid-area: tt;
+// }
+// .tfr {
+//   grid-area: tfr;
+// }
+// .tfv {
+//   grid-area: tfv;
+// }
+// .tsx {
+//   grid-area: tsx;
+// }
+// .tsn {
+//   grid-area: tsn;
+// }
+// .te {
+//   grid-area: te;
+// }
+// .tpin {
+//   grid-area: tpin;
+// }
+// .tfot {
+//   grid-area: tfot;
+// }
+// .tbal {
+//   grid-area: tbal;
+// }
+
+// .tilleg_item-bg_6 {
+//   font-size: 15px;
+// }
+
+.tilleg_list_frame:hover .tilleg-help-block {
+  .tilleg_item-description {
+    font-size: 13px;
+    &_price {
+      font-size: 13px;
+      width: 80%;
+
+      &_second {
+        font-size: 13px;
+        width: 80%;
+      }
     }
   }
-}
-
-.tf {
-  grid-area: tf;
-}
-.ts {
-  grid-area: ts;
-}
-.tt {
-  grid-area: tt;
-}
-.tfr {
-  grid-area: tfr;
-}
-.tfv {
-  grid-area: tfv;
-}
-.tsx {
-  grid-area: tsx;
-}
-.tsn {
-  grid-area: tsn;
-}
-.te {
-  grid-area: te;
-}
-
-.tilleg_item-bg_6 {
-  font-size: 15px;
 }
