--- a/src/scss/layouts/layout_1200/_tilleg.scss
+++ b/src/scss/layouts/layout_1200/_tilleg.scss
@@ -6,4 +6,77 @@
     margin-top: 100px;
     margin-bottom: 30px;
   }
+
+  &_list {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-areas:
+      "tf tf ts ts tt tt"
+      "tfr tfr tfv tfv tsx tsx"
+      "tsn tsn te te tpin tpin"
+      ". tfot tfot tbal tbal .";
+    column-gap: 20px;
+    row-gap: 20px;
+    width: 1fr;
+
+    &_frame {
+      padding: 0;
+      margin-top: 0;
+    }
+  }
+}
+
+.tf {
+  grid-area: tf;
+}
+.ts {
+  grid-area: ts;
+}
+.tt {
+  grid-area: tt;
+}
+.tfr {
+  grid-area: tfr;
+}
+.tfv {
+  grid-area: tfv;
+}
+.tsx {
+  grid-area: tsx;
+}
+.tsn {
+  grid-area: tsn;
+}
+.te {
+  grid-area: te;
+}
+.tpin {
+  grid-area: tpin;
+}
+.tfot {
+  grid-area: tfot;
+}
+.tbal {
+  grid-area: tbal;
+}
+
+.tilleg_item-bg_6 {
+  font-size: 15px;
+}
+
+.tilleg_list_frame:hover .tilleg-help-block {
+  .tilleg_item-description {
+    font-size: 16px;
+    padding: 40px;
+
+    &_price {
+      font-size: 16px;
+      width: 80%;
+
+      &_second {
+        font-size: 16px;
+        width: 80%;
+      }
+    }
+  }
 }
