--- a/src/scss/layouts/layout_1200/_tilleg.scss
+++ b/src/scss/layouts/layout_1200/_tilleg.scss
@@ -8,13 +8,22 @@
   }
 
   &_list {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    // grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    // grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    // grid-template-areas:
+    //   "tf tf ts ts tt tt"
+    //   "tfr tfr tfv tfv tsx tsx"
+    //   "tsn tsn te te tpin tpin"
+    //   ". tfot tfot tbal tbal .";
     grid-template-areas:
-      "tf tf ts ts tt tt"
-      "tfr tfr tfv tfv tsx tsx"
-      "tsn tsn te te tpin tpin"
-      ". tfot tfot tbal tbal .";
+      "tf tf ts ts"
+      "tt tt tfr tfr"
+      " tfv tfv tsx tsx"
+      "tsn tsn te te"
+      "tpin tpin tfot tfot"
+      ". tbal tbal .";
     column-gap: 20px;
     row-gap: 20px;
     width: 1fr;
@@ -69,13 +78,24 @@
     font-size: 16px;
     padding: 40px;
 
+    &_text {
+      width: 80%;
+      max-width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    margin-right: auto;
+
     &_price {
       font-size: 16px;
       width: 80%;
+      max-width: 80%;
+      margin-top: 20px;
 
       &_second {
         font-size: 16px;
         width: 80%;
+        max-width: 80%;
       }
     }
   }
