--- a/src/scss/layouts/layout_500/_tilleg.scss
+++ b/src/scss/layouts/layout_500/_tilleg.scss
@@ -12,14 +12,16 @@
 
 .tilleg_list_frame:hover .tilleg-help-block {
   .tilleg_item-description {
-    font-size: 2vw;
+    font-size: 14px;
+    padding: 20px 40px;
+
     &_price {
-      font-size: 2vw;
+      font-size: 14px;
       width: fit-content;
       max-width: 90%;
 
       &_second {
-        font-size: 2vw;
+        font-size: 14px;
         width: fit-content;
         max-width: 90%;
       }
