--- a/src/scss/layouts/layout_000/_general.scss
+++ b/src/scss/layouts/layout_000/_general.scss
@@ -7,7 +7,7 @@
 html {
   font-family: $mainFontFamily;
   font-size: 16px;
-  line-height: 1.7em;
+  line-height: 1;
   scroll-behavior: smooth;
   width: 100vw;
   overflow-x: hidden;
