--- a/src/scss/layouts/layout_000/_tilleg.scss
+++ b/src/scss/layouts/layout_000/_tilleg.scss
@@ -140,11 +140,11 @@
 // }
 // .tilleg_list_frame:hover .tilleg-help-block {
 //   background-image: url(/i/img/kids.jpg);
-// background-size: cover;
+//   background-size: cover;
 //   background-position: top;
 //   background-color: rgba(58, 58, 58, 0.95);
 //   background-blend-mode: overlay;
-
+//   visibility: visible;
 //   margin-top: auto;
 //   margin-bottom: auto;
 
@@ -162,6 +162,7 @@
 //     font-weight: 500;
 //     font-family: $wowFontFamily;
 //     z-index: 2000;
+//     visibility: visible;
 //   }
 
 //   .tilleg_item-description_price {
@@ -189,6 +190,6 @@
 //       margin-right: auto;
 //       width: fit-content;
 //       max-width: 90%;
-// //     }
+//     }
 //   }
 // }
