--- a/src/scss/layouts/layout_1200/_tilleg.scss
+++ b/src/scss/layouts/layout_1200/_tilleg.scss
@@ -33,6 +33,31 @@
       margin-top: 0;
     }
   }
+  &_item-description {
+    font-size: 16px;
+    padding: 40px;
+
+    &_text {
+      width: 80%;
+      max-width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    margin-right: auto;
+
+    &_price {
+      font-size: 16px;
+      width: 80%;
+      max-width: 80%;
+      margin-top: 20px;
+
+      &_second {
+        font-size: 16px;
+        width: 80%;
+        max-width: 80%;
+      }
+    }
+  }
 }
 
 .tf {
@@ -73,11 +98,36 @@
   font-size: 15px;
 }
 
+// --ПРИ НАВЕДЕНИИ НА БЛОК
+.tilleg_list_frame:hover .tilleg_item-img {
+  visibility: hidden;
+}
+
 .tilleg_list_frame:hover .tilleg-help-block {
+  background-image: url(/i/img/kids.jpg);
+  background-size: cover;
+  background-position: top;
+  background-color: rgba(58, 58, 58, 0.95);
+  background-blend-mode: overlay;
+  visibility: visible;
+  margin-top: auto;
+  margin-bottom: auto;
+
   .tilleg_item-description {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    display: block;
+
+    line-height: 1.2;
+    color: white;
+    font-weight: 500;
+    font-family: $wowFontFamily;
+    z-index: 2000;
+    visibility: visible;
     font-size: 16px;
     padding: 40px;
-
     &_text {
       width: 80%;
       max-width: 80%;
@@ -85,18 +135,33 @@
       margin-right: auto;
     }
     margin-right: auto;
+  }
 
-    &_price {
+  .tilleg_item-description_price {
+    background-color: #ff0650;
+    margin-top: 20px;
+    border-radius: 40px;
+    text-align: center;
+    width: fit-content;
+    padding: 10px 30px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 16px;
+    width: 80%;
+    max-width: 80%;
+
+    &_second {
+      background-color: #33b31a;
+      margin-top: 10px;
+      border-radius: 40px;
+      text-align: center;
+      width: fit-content;
+      padding: 10px 30px;
+      margin-left: auto;
+      margin-right: auto;
       font-size: 16px;
       width: 80%;
       max-width: 80%;
-      margin-top: 20px;
-
-      &_second {
-        font-size: 16px;
-        width: 80%;
-        max-width: 80%;
-      }
     }
   }
 }
