--- a/src/scss/layouts/layout_500/_tilleg.scss
+++ b/src/scss/layouts/layout_500/_tilleg.scss
@@ -8,12 +8,10 @@
     font-size: 45px;
     line-height: 45px;
   }
-}
 
-.tilleg_list_frame:hover .tilleg-help-block {
-  .tilleg_item-description {
-    font-size: 14px;
+  &_item-description {
     padding: 20px 40px;
+    font-size: 14px;
 
     &_price {
       font-size: 14px;
@@ -28,3 +26,22 @@
     }
   }
 }
+
+// .tilleg_list_frame:hover .tilleg-help-block {
+//   .tilleg_item-description {
+//     font-size: 14px;
+//     padding: 20px 40px;
+
+//     &_price {
+//       font-size: 14px;
+//       width: fit-content;
+//       max-width: 90%;
+
+//       &_second {
+//         font-size: 14px;
+//         width: fit-content;
+//         max-width: 90%;
+//       }
+//     }
+//   }
+// }
