--- a/src/scss/layouts/layout_800/_tilleg.scss
+++ b/src/scss/layouts/layout_800/_tilleg.scss
@@ -19,13 +19,10 @@
     row-gap: 30px;
     justify-content: center;
   }
-}
 
-.tilleg_list_frame:hover .tilleg-help-block {
-  .tilleg_item-description {
+  &_item-description {
     font-size: 12px;
     padding: 20px 30px;
-
     &_price {
       font-size: 12px;
       width: 95%;
@@ -40,3 +37,23 @@
     }
   }
 }
+
+// .tilleg_list_frame:hover .tilleg-help-block {
+//   .tilleg_item-description {
+//     font-size: 12px;
+//     padding: 20px 30px;
+
+//     &_price {
+//       font-size: 12px;
+//       width: 95%;
+//       max-width: 95%;
+//       margin-top: 10px;
+
+//       &_second {
+//         font-size: 12px;
+//         width: 95%;
+//         max-width: 95%;
+//       }
+//     }
+//   }
+// }
