--- a/src/scss/layouts/layout_000/_feedback.scss
+++ b/src/scss/layouts/layout_000/_feedback.scss
@@ -2,11 +2,15 @@
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  background: linear-gradient(
-    0deg,
-    rgba(254, 139, 5, 1) 0%,
-    rgba(254, 200, 17, 1) 100%
-  );
+  background-image: url(/i/img/feedback-bg-s.jpg);
+  background-size: cover;
+  background-position-x: center;
+  background-position-y: bottom;
+  // background: linear-gradient(
+  //   0deg,
+  //   rgba(254, 139, 5, 1) 0%,
+  //   rgba(254, 200, 17, 1) 100%
+  // );
   text-align: center;
   border-radius: 40px;
   &_title {
@@ -26,5 +30,28 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  &_text {
+    width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 24px;
+    line-height: 24px;
+    text-align: center;
+    letter-spacing: 1.2px;
+    font-weight: 800;
+    font-family: $wowFontFamily;
+    color: white;
+    padding: 75px 0 40px;
+  }
+
+  &_shape {
+    background-image: url(/i/img/feedback-shape-s.jpg);
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: top;
+    width: 100%;
+    height: 100%;
   }
 }
