--- a/src/scss/layouts/layout_000/_feedback.scss
+++ b/src/scss/layouts/layout_000/_feedback.scss
@@ -1,5 +1,6 @@
 .feedback {
   width: 90%;
+  max-width: 470px;
   margin-left: auto;
   margin-right: auto;
   background-image: url(/i/img/feedback-bg-s.jpg);
@@ -33,7 +34,8 @@
   }
 
   &_text {
-    width: 85%;
+    width: 310px;
+    max-width: 310px;
     margin-left: auto;
     margin-right: auto;
     font-size: 24px;
