--- a/src/scss/layouts/layout_500/_footer.scss
+++ b/src/scss/layouts/layout_500/_footer.scss
@@ -1,11 +1,5 @@
 .footer {
-  &__main-section {
-    width: auto;
-    margin-left: 80px;
-    margin-right: 80px;
-  }
-
-  &__rights {
-    font-size: 14px;
+  &_inn {
+    width: 70%;
   }
 }
