--- a/src/scss/layouts/layout_800/_footer.scss
+++ b/src/scss/layouts/layout_800/_footer.scss
@@ -1,10 +1,31 @@
 .footer {
-  &__main-section {
-    margin-left: 100px;
-    margin-right: 100px;
+  &_inn {
+    width: 80%;
+    max-width: 786px;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 40px;
   }
 
-  &__rights {
+  &_logo {
+    width: 200px;
+  }
+  &_main-text {
+    display: block;
+    color: white;
     font-size: 16px;
+    line-height: 1.2;
+    text-align: center;
+    width: 80%;
+  }
+
+  &_sec-text {
+    display: block;
+    line-height: 1;
+  }
+
+  &_tlf {
+    font-size: 20px;
+    margin-top: 20px;
   }
 }
