--- a/src/scss/layouts/layout_800/_footer.scss
+++ b/src/scss/layouts/layout_800/_footer.scss
@@ -12,7 +12,7 @@
   }
   &_main-text {
     display: block;
-    color: white;
+    color: #3a3a3a;
     font-size: 16px;
     line-height: 1.2;
     text-align: center;
