--- a/src/scss/layouts/layout_000/_header.scss
+++ b/src/scss/layouts/layout_000/_header.scss
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 20000; /* Чтобы хедер был выше других элементов */
+  z-index: 2000; /* Чтобы хедер был выше других элементов */
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
   // *LOGO
   &_logo {
@@ -75,4 +75,58 @@
 // --Список вкладок
 .header_tabs {
   display: none;
+}
+
+// --Бургерное меню в мобильной версии
+.header-with-burger {
+  position: relative;
+}
+.burger {
+  display: none;
+  background: white;
+  width: 100%;
+  position: fixed;
+  top: 60px;
+  left: 0;
+  z-index: 3000;
+
+  &_list {
+    list-style-type: none;
+    padding-inline-start: 0;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    padding-right: 10px;
+    &_item {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-left: 40px;
+      margin-right: 40px;
+      border-bottom: 1px solid #8845ac;
+      padding-bottom: 10px;
+
+      &_link {
+        text-decoration: none;
+        color: #8845ac;
+        font-weight: 700;
+        &:hover {
+          background-color: #8845ac;
+          color: white;
+          padding: 5px 10px;
+          border-radius: 40px;
+          box-shadow: 0 8px 15px rgba(157, 52, 184, 0.25);
+        }
+      }
+    }
+  }
+}
+
+.burger-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  z-index: 1500; /* Below the burger menu */
 }
