--- a/src/scss/layouts/layout_1200/_header.scss
+++ b/src/scss/layouts/layout_1200/_header.scss
@@ -30,6 +30,7 @@
   text-decoration: none;
   color: #8845ac;
   font-weight: 700;
+  border-radius: 40px;
 
   &:hover {
     background-color: #8845ac;
