--- a/src/scss/layouts/layout_000/_arrow.scss
+++ b/src/scss/layouts/layout_000/_arrow.scss
@@ -1,4 +1,4 @@
-.arrow-scroll {
+.arrow {
   width: 50px;
   height: 50px;
   padding: 8px;
@@ -9,6 +9,37 @@
   border-radius: 100%;
   text-align: center;
   vertical-align: middle;
+  &:active {
+    background-color: $dark-grey;
+  }
+}
+
+.arrow-scroll {
+  position: absolute;
+  width: 41px;
+  top: 5px;
+  left: 5px;
+}
+
+.kontaktbutton {
+  width: 50px;
+  height: 50px;
+  padding: 8px;
+  background-color: #e010bd;
+  position: fixed;
+  left: 15px;
+  bottom: 55px;
+  border-radius: 100%;
+  text-align: center;
+  vertical-align: middle;
+
+  &_img {
+    position: absolute;
+    width: 25px;
+
+    top: 12px;
+    left: 13px;
+  }
 
   &:active {
     background-color: $dark-grey;
