--- a/src/scss/layouts/layout_000/_title.scss
+++ b/src/scss/layouts/layout_000/_title.scss
@@ -94,3 +94,31 @@
     }
   }
 }
+
+// --Видео внутри TITLE
+.overlay-video {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  z-index: 4000;
+}
+
+.video-container {
+  position: relative;
+  display: block;
+  width: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
+}
+
+video {
+  width: 100%;
+  height: auto;
+}
