--- a/src/scss/layouts/layout_500/_header.scss
+++ b/src/scss/layouts/layout_500/_header.scss
@@ -31,10 +31,16 @@
     &_inst {
       margin-right: 5px;
       line-height: 0;
+      &:hover {
+        filter: brightness(120%);
+      }
     }
     &_fb {
       margin-left: 5px;
       line-height: 0;
+      &:hover {
+        filter: brightness(120%);
+      }
     }
   }
 }
