--- a/src/scss/layouts/layout_1200/_footer.scss
+++ b/src/scss/layouts/layout_1200/_footer.scss
@@ -48,6 +48,8 @@
     line-height: 1;
     text-align: right;
     grid-area: logotext;
+    margin-top: 5px;
+    margin-bottom: 0;
   }
 
   &_location {
