--- a/src/scss/layouts/layout_1200/_form.scss
+++ b/src/scss/layouts/layout_1200/_form.scss
@@ -1,6 +1,6 @@
 .form {
-  width: 80%;
-  max-width: 1800px;
+  // width: 80%;
+  // max-width: 1800px;
   background-repeat: no-repeat;
   background-image: url(../../../i/img/form-bg.jpg);
   background-size: cover;
