--- a/src/scss/layouts/layout_1200/_feedback.scss
+++ b/src/scss/layouts/layout_1200/_feedback.scss
@@ -1,4 +1,6 @@
 .feedback {
+  margin-top: 80px;
+  margin-bottom: 40px;
   width: 80%;
   max-width: 1200px;
   background-image: url(/i/img/feedback-l.jpg);
