--- a/src/scss/layouts/layout_000/_form.scss
+++ b/src/scss/layouts/layout_000/_form.scss
@@ -15,6 +15,13 @@
   padding: 60px 15px 35px;
   box-shadow: 0px 40px 65px 5px rgba(255, 214, 1, 0.5);
 
+  &_nyfane {
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+    line-height: 14px;
+    margin-top: 5px;
+  }
+
   &_title {
     font-size: 28px;
     line-height: 28px;
@@ -78,7 +85,8 @@
   }
 
   &_img {
-    width: 70%;
+    width: 50%;
+    max-width: 250px;
     margin-top: 40px;
   }
 }
