--- a/src/scss/layouts/layout_000/_prices.scss
+++ b/src/scss/layouts/layout_000/_prices.scss
@@ -194,6 +194,7 @@
         background-color: #e5206b;
         padding: 10px;
         border-radius: 30px;
+        color: white;
 
         &_2 {
           background-color: #c35ebd;
