--- a/src/scss/layouts/layout_1200/_heroes.scss
+++ b/src/scss/layouts/layout_1200/_heroes.scss
@@ -33,9 +33,9 @@
         margin-top: 55px;
       }
 
-      &_7 {
-        width: 313.33px;
-      }
+      // &_7 {
+      //   width: 313.33px;
+      // }
     }
   }
 }
