--- a/src/scss/layouts/layout_990/_heroes.scss
+++ b/src/scss/layouts/layout_990/_heroes.scss
@@ -20,10 +20,10 @@
         }
       }
 
-      &_7 {
-        width: 385px;
-        max-width: 385px;
-      }
+      // &_7 {
+      //   width: 385px;
+      //   max-width: 385px;
+      // }
     }
   }
 }
