--- a/src/scss/layouts/layout_1500/_heroes.scss
+++ b/src/scss/layouts/layout_1500/_heroes.scss
@@ -10,9 +10,9 @@
   &_grid {
     max-width: 1160px;
     &_block {
-      &_7 {
-        width: 366.66px;
-      }
+      // &_7 {
+      //   width: 366.66px;
+      // }
     }
   }
 }
