--- a/src/scss/layouts/layout_500/_heroes.scss
+++ b/src/scss/layouts/layout_500/_heroes.scss
@@ -1,6 +1,8 @@
 .heroes {
   &_grid_block {
     padding-top: 190px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
   &_grid_block_img {
     width: 250px;
