--- a/src/scss/layouts/layout_800/_heroes.scss
+++ b/src/scss/layouts/layout_800/_heroes.scss
@@ -21,12 +21,17 @@
     grid-template-areas:
       "first sec"
       "third  forth"
-      "fifth  sixth"
-      "seventh seventh";
+      "fifth  sixth";
     &_block {
       padding-top: 160px;
       width: 100%;
       margin-bottom: 25px;
+
+      &_heroes {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
       &_1 {
         grid-area: first;
@@ -46,10 +51,10 @@
       &_6 {
         grid-area: sixth;
       }
-      &_7 {
-        grid-area: seventh;
-        width: 285px;
-      }
+      // &_7 {
+      //   grid-area: seventh;
+      //   width: 285px;
+      // }
     }
 
     &_block_img {
