--- a/src/scss/layouts/layout_000/_overlay.scss
+++ b/src/scss/layouts/layout_000/_overlay.scss
@@ -39,7 +39,7 @@
 
 /* Кнопка закрытия */
 .close-button {
-  position: absolute;
+  position: sticky;
   top: 10px;
   right: 10px;
   background: white;
