--- a/src/scss/layouts/layout_600/_overlay.scss
+++ b/src/scss/layouts/layout_600/_overlay.scss
@@ -1,64 +1,35 @@
-// /* Контейнер модального окна */
-// .overlayhelter_superhelter {
-//   max-width: 600px; /* Максимальная ширина */
-//   width: 80%; /* Ширина 80% */
-//   padding: 25px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   box-sizing: border-box; /* Это гарантирует, что отступы учитываются внутри элемента */
-// }
+.overlayhelter-block {
+  max-width: 500px;
+}
 
-// /* Заголовок */
-// .overlayhelter_superhelter-title {
-//   font-size: 32px;
-//   word-wrap: break-word; /* Добавлено, чтобы текст не выходил за пределы */
-//   overflow-wrap: break-word; /* Добавлено для лучшего контроля за текстом */
-// }
+.overlayhelter-title {
+  font-size: 26px;
+}
 
-// /* Блок с ценой */
-// .superhelter-price {
-//   font-size: 14px;
-//   padding: 8px 16px;
-//   white-space: nowrap; /* Это гарантирует, что текст не будет переноситься */
-// }
+.overlayhelter-price-number {
+  font-size: 16px;
+}
+.overlayhelter-price-text {
+  font-size: 16px;
+}
+/* Подзаголовки и текст */
+.overlayhelter-textblock-subtitle,
+.overlayhelter-textblock-subtitle-2 {
+  font-size: 22px;
+}
+.overlayhelter-textblock-subtitle-text,
+.overlayhelter-textblock-extratext {
+  font-size: 16px;
+}
+.overlayhelter-textblock-grid-item p {
+  font-size: 16px;
+}
 
-// /* Грид */
-// .superhelter-grid {
-//   display: grid;
-//   grid-template-columns: repeat(2, 1fr);
-//   gap: 8px;
-// }
+/* Видео */
+.overlayhelter-video {
+  max-width: 380px;
+}
 
-// /* Элементы грида */
-// .superhelter-grid-item img {
-//   width: 80px;
-//   height: 160px;
-//   object-fit: cover; /* Это поможет изображению не растягиваться */
-//   max-width: 100%; /* Не позволяем картинке выходить за пределы */
-// }
-
-// /* Тексты в элементах грида */
-// .superhelter-grid-item p {
-//   font-size: 14px;
-//   padding: 8px 14px;
-//   word-wrap: break-word;
-//   overflow-wrap: break-word;
-// }
-
-// /* Подзаголовки */
-// .superhelter-subtitle,
-// .superhelter-subtitle-2 {
-//   font-size: 18px;
-// }
-
-// /* Тексты */
-// .superhelter-subtitle-text,
-// .overlayhelter_superhelter-text {
-//   font-size: 14px;
-// }
-// .overlayhelter_superhelter-mainblock {
-//   max-width: 500px;
-// }
-// .superhelter-video {
-//   max-width: 500px;
-// }
+.overlayhelter-textblock {
+  max-width: 380px;
+}
